--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -100,24 +100,8 @@ After that make sure to run your package manager again, either `yarn` or `npm in
 
 **Problem:** Reanimated supports New Architecture (Fabric) only on the latest minor release of React Native.
 
-**Solution:** Please upgrade to at least React Native 0.72 or downgrade to an older version of Reanimated 3.
-
-#### Supported React Native versions - New Architecture enabled
-
-| Reanimated                  | Minimum React-native | Maximum React-native |
-| --------------------------- | -------------------- | -------------------- |
-| from **3.1.x** to **3.5.x** | 0.72                 | 0.72                 |
-
-#### Supported React Native versions - New Architecture NOT enabled
-
-| Reanimated                    | Minimum React-native | Maximum React-native |
-| ----------------------------- | -------------------- | -------------------- |
-| from **3.1.x** to **3.5.x**   | 0.72                 | 0.72                 |
-| from **3.4.x** to **3.5.x**   | 0.66                 | 0.72                 |
-| from **3.1.x** to **3.3.x**   | 0.63                 | 0.72                 |
-| from **2.10.x** to **2.17.x** | 0.63                 | 0.70                 |
-| from **2.5.x** to **2.9.x**   | 0.63                 | 0.68                 |
-| from **2.3.x** to **2.5.x**   | 0.63                 | 0.67                 |
+**Solution:** Please upgrade to at newer version of React Native or downgrade to an older version of Reanimated 3.
+See [this link](Compatibility) for full list of supported versions of React Native.
 
 ## Threading issues
 
