--- a/docs/docs/guides/compatibility.mdx
+++ b/docs/docs/guides/compatibility.mdx
@@ -11,7 +11,7 @@ that are being introduced all the time. Thats why applications with mismatched R
 versions may show unexpected behavior or even fail to build at all. The table below contains official list
 of supported React Native versions.
 
-#### Supported React Native versions - New Architecture enabled
+#### Supported React Native versions - New Architecture (Fabric) enabled
 
 | Reanimated version(s)       | The oldest supported React Native | The newest supported React Native |
 | --------------------------- | --------------------------------- | --------------------------------- |
