--- a/docs/docs/guides/compatibility.mdx
+++ b/docs/docs/guides/compatibility.mdx
@@ -1,5 +1,5 @@
 ---
-id: Compatibility
+id: compatibility
 title: Compatibility
 sidebar_label: Compatibility
 ---
@@ -11,13 +11,13 @@ that are being introduced all the time. Thats why applications with mismatched R
 versions may show unexpected behavior or even fail to build at all. The table below contains official list
 of supported React Native versions.
 
-#### Supported React Native versions - New Architecture (Fabric) enabled
+#### Supported React Native versions - New Architecture (Fabric)
 
 | Reanimated version(s)       | The oldest supported React Native | The newest supported React Native |
 | --------------------------- | --------------------------------- | --------------------------------- |
 | from **3.1.x** to **3.5.x** | 0.72                              | 0.72                              |
 
-#### Supported React Native versions - New Architecture NOT enabled
+#### Supported React Native versions - Old Architecture (Paper)
 
 | Reanimated version(s)         | The oldest supported React Native | The oldest supported React Native |
 | ----------------------------- | --------------------------------- | --------------------------------- |
