--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -137,7 +137,7 @@ See [Multiple versions of Reanimated were detected](#multiple-versions-of-reanim
 **Problem:** Reanimated supports New Architecture (Fabric) only on the latest minor release of React Native.
 
 **Solution:** Please upgrade to at newer version of React Native or downgrade to an older version of Reanimated 3.
-See [this link](Compatibility) for full list of supported versions of React Native.
+See [this link](compatibility) for full list of supported versions of React Native.
 
 ## Threading issues
 
