Demo Sensor example PoC

--- a/docs/docs/device/useAnimatedSensor.mdx
+++ b/docs/docs/device/useAnimatedSensor.mdx
@@ -1,16 +1,10 @@
 # useAnimatedSensor
 
-:::info
-This page was ported from an old version of the documentation.
+`useAnimatedSensor` lets you based on device sensors like accelerometer and gyroscope.
 
-As we're rewriting the documentation some of the pages might be a little outdated.
-:::
+import { useAnimatedSensorPlayground } from '@site/src/components/InteractivePlayground';
 
-With the `useAnimatedSensor` hook, you can easily create cool interactive animations based on data from sensors in the device such as gyroscope, accelerometer etc.
-
-```js
-useAnimatedSensor(sensorType: [SensorType], config?: [UserConfig]) -> [AnimatedSensor]
-```
+<InteractivePlayground usePlayground={useAnimatedSensorPlayground} />
 
 ### Arguments
 
