Change compatibility table

--- a/docs/docs/guides/compatibility.mdx
+++ b/docs/docs/guides/compatibility.mdx
@@ -7,18 +7,8 @@ sidebar_label: Compatibility
 
 #### Supported React Native versions - New Architecture (Fabric)
 
-| Reanimated version(s)       | The oldest supported React Native | The newest supported React Native |
-| --------------------------- | --------------------------------- | --------------------------------- |
-| from **3.1.x** to **3.5.x** | 0.72                              | 0.72                              |
-| from **3.0.x** to **3.5.x** | 0.71                              | 0.71                              |
+<CompatibilityTableFabric />
 
 #### Supported React Native versions - Old Architecture (Paper)
 
-| Reanimated version(s)         | The oldest supported React Native | The oldest supported React Native |
-| ----------------------------- | --------------------------------- | --------------------------------- |
-| from **3.4.x** to **3.5.x**   | 0.66                              | 0.72                              |
-| from **3.1.x** to **3.3.x**   | 0.63                              | 0.72                              |
-| from **3.0.x** to **3.3.x**   | 0.63                              | 0.71                              |
-| from **2.10.x** to **2.17.x** | 0.63                              | 0.70                              |
-| from **2.5.x** to **2.9.x**   | 0.63                              | 0.68                              |
-| from **2.3.x** to **2.5.x**   | 0.63                              | 0.67                              |
+<CompatibilityTablePaper />
