--- a/docs/docs/layout-animations/layout-animation-config.mdx
+++ b/docs/docs/layout-animations/layout-animation-config.mdx
@@ -1,28 +1,26 @@
 ---
 sidebar_position: 5
+title: LayoutAnimationConfig
+sidebar_label: Skipping Layout Animations
 ---
 
-# Skipping Layout Animations
-
-`LayoutAnimationConfig` is a wrapper that lets you skip entering and exiting animations.
+`LayoutAnimationConfig` is a component that lets you skip entering and exiting animations.
 
 ## Reference
 
 ```javascript
-import Animated, {
-  LayoutAnimationConfig,
-  PinwheelIn,
-  PinwheelOut,
-} from 'react-native-reanimated';
+import { LayoutAnimationConfig } from 'react-native-reanimated';
 
 function App() {
   const [show, setShow] = React.useState(true);
 
   return (
+    // highlight-next-line
     <LayoutAnimationConfig skipEntering>
       <View>
         {show && <Animated.View entering={PinwheelIn} exiting={PinwheelOut} />}
       </View>
+      // highlight-next-line
     </LayoutAnimationConfig>
   );
 }
@@ -74,7 +72,8 @@ import src from '!!raw-loader!@site/src/examples/LayoutAnimationConfig';
 
 ## Remarks
 
-- You can nest the `LayoutAnimationConfig` wrapper if you want to disable animations on a smaller subset of components.
+- You can nest the `LayoutAnimationConfig` component if you want to disable animations on a smaller subset of components.
+
 - If you are working with a `FlatList` and want to skip animations in items when the list is mounted and unmounted you can use `skipEnteringExitingAnimations`. This prop automatically wraps your `FlatList` with `<LayoutAnimationConfig skipEntering skipExiting>`.
 
 ## Platform compatibility
