--- a/docs/docs/device/useAnimatedSensor.mdx
+++ b/docs/docs/device/useAnimatedSensor.mdx
@@ -10,7 +10,9 @@ sidebar_position: 2
 - [Magnetic field](/docs/device/useAnimatedSensor#magnetic-field) - the magnetic field vector.
 - [Rotation](/docs/device/useAnimatedSensor#rotation) - the device orientation in three dimensions.
 
-For a full, in depth documentation follow [Sensors guide](https://developer.android.com/guide/topics/sensors/sensors_overview) on Android Developers and [Device motion](https://developer.apple.com/documentation/coremotion/getting_processed_device-motion_data) in the Apple Developer documentation.
+For a full, in depth documentation follow the [Sensors guide](https://developer.android.com/guide/topics/sensors/sensors_overview) on Android Developers and the [Device motion](https://developer.apple.com/documentation/coremotion/getting_processed_device-motion_data) in the Apple Developer documentation.
+
+The playground below mimics the behaviour and returned values of selected sensors:
 
 import { useAnimatedSensorPlayground } from '@site/src/components/InteractivePlayground';
 
@@ -108,121 +110,95 @@ enum InterfaceOrientation {
 
 A type of a sensor to use. You specify the sensor type using a `SensorType` enum containing fields:
 
-- `ACCELEROMETER`
-- `GYROSCOPE`
-- `GRAVITY`
-- `MAGNETIC_FIELD`
-- `ROTATION`
+- `ACCELEROMETER` - measures the device acceleration along x, y, and z axes (excluding gravity) in m/s^2.
+- `GYROSCOPE` - measures the rate of rotation along x, y, and z axes in radians per second.
+- `GRAVITY` - measures acceleration due to gravity along x, y, and z axes in m/s^2.
+- `MAGNETIC_FIELD` - measures the strength and direction of the Earth's magnetic field in microtesla (μT).
+- `ROTATION` - measures the device orientation in three dimensions. This sensor represents the rotation by both Euler angles (roll, pitch, and yaw) and a quaternion.
 
 #### `config` <Optional />
 
 Available properties:
 
-| Name                         | Type                           | Default                  | Description        |
-| ---------------------------- | ------------------------------ | ------------------------ | ------------------ |
-| interval                     | `number`&nbsp;or&nbsp;`"auto"` | `"auto"`                 | on iOS up to 100Hz |
-| adjustToInterfaceOrientation | `boolean`                      | `true`                   |                    |
-| iosReferenceFrame            | `IOSReferenceFrame`            | `IOSReferenceFrame.Auto` |                    |
+| Name                         | Type                | Default                  | Description                                                                             |
+| ---------------------------- | ------------------- | ------------------------ | --------------------------------------------------------------------------------------- |
+| interval                     | `number｜"auto"`    | `"auto"`                 | Time in milliseconds between sensor readings. `"auto"` matches the device refresh rate. |
+| adjustToInterfaceOrientation | `boolean`           | `true`                   | Whether to adjust measurements to the current interface orientation.                    |
+| iosReferenceFrame            | `IOSReferenceFrame` | `IOSReferenceFrame.Auto` | The frame of reference for device's sensors on iOS.                                     |
 
 You can specify the iOS reference frame using an `IOSReferenceFrame` enum containing fields:
 
 - [`xArbitraryZVertical`](https://developer.apple.com/documentation/coremotion/cmattitudereferenceframe/1615953-xarbitraryzvertical) a reference frame where the Z axis is vertical and the X axis points in an arbitrary direction in the horizontal plane.
-
 - [`xArbitraryCorrectedZVertical`](https://developer.apple.com/documentation/coremotion/cmattitudereferenceframe/1615969-xarbitrarycorrectedzvertical) a reference frame where the Z axis is vertical and has improved rotation accuracy, and the X axis points in an arbitrary direction in the horizontal plane.
-
 - [`XMagneticNorthZVertical`](https://developer.apple.com/documentation/coremotion/cmattitudereferenceframe/1616123-xmagneticnorthzvertical) a reference frame where the Z axis is vertical and the X axis points to the magnetic north pole.
-
 - [`XTrueNorthZVertical`](https://developer.apple.com/documentation/coremotion/cmattitudereferenceframe/1616019-xtruenorthzvertical) a reference frame where the Z axis is vertical and the X axis points to the geographic north pole.
-
 - `Auto` on iOS devices without magnetometer (eg. iPods) `XArbitraryZVertical`, on devices with magnetometer `XArbitraryCorrectedZVertical`
 
 ### Returns
 
 `useAnimatedSensor` returns an object containing these fields:
 
-- `sensor` a [shared value](/docs/fundamentals/glossary#shared-value) containing the sensor measurements. The measurement depend on the type of sensor you choose with [sensorType](/docs/device/useAnimatedSensor#sensortype) argument.
+| Name        | Type                                  | Description                                                                                                                                                                                                                                     |
+| ----------- | ------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| sensor      | `SharedValue<Value3D｜ValueRotation>` | A [shared value](/docs/fundamentals/glossary#shared-value) containing the sensor measurements. The values returned by the sensor depend on the type of sensor you choose with [sensorType](/docs/device/useAnimatedSensor#sensortype) argument. |
+| unregister  | `() => void`                          | Allows to stop listening to sensor updates                                                                                                                                                                                                      |
+| isAvailable | `boolean`                             | Indicates whether sensor is available to use. You won't be able to use a sensor when it's missing from the device or the app doesn't have permission to access it.                                                                              |
+| config      | `SensorConfig`                        | An object containing sensor configuration.                                                                                                                                                                                                      |
 
-- `unregister` a function allowing to stop listening to sensor updates.
-
-- `isAvailable` a boolean indicating whether sensor is available to use. You won't be able to use a sensor when it's missing from the device or the app doesn't have permission to access it.
-
-- `config` an object containing sensor configuration.
-
-## Sensors
-
-### Accelerometer
-
-The accelerometer measures the device acceleration along x, y, and z axes (excluding gravity) in m/s^2.
-
-```javascript
-const accelerometer = useAnimatedSensor(SensorType.ACCELEROMETER);
-```
-
-### Gyroscope
-
-The gyroscope measures the rate of rotation along x, y, and z axes in radians per second.
-
-```javascript
-const gyroscope = useAnimatedSensor(SensorType.GYROSCOPE);
-```
-
-### Gravity
-
-The gravity sensor measures acceleration due to gravity along x, y, and z axes in m/s^2.
-
-```javascript
-const gravity = useAnimatedSensor(SensorType.GRAVITY);
-```
-
-### Magnetic field
-
-The magnetic field sensor measures the strength and direction of the Earth's magnetic field in microtesla (μT).
-
-```javascript
-const magneticField = useAnimatedSensor(SensorType.MAGNETIC_FIELD);
-```
-
-### Rotation
-
-The rotation sensor measures the device orientation in three dimensions. This sensor represents the rotation by both Euler angles (roll, pitch, and yaw) and a quaternion.
-
-```javascript
-const rotation = useAnimatedSensor(SensorType.ROTATION);
-```
+The shared value returned from the **rotation sensor** is an object contain Euler angles, a quaternion and an interface orientation:
 
 Euler angles are:
 
-- **Roll** which is a rotation in radians along an axis that goes from the top to the bottom of the device.
-- **Pitch** which is a rotation in radians along an axis that goes from side to side of the device.
-- **Yaw** which is a rotation in radians along an axis that goes from the front to the back of the device.
+- `roll: number` - a rotation in radians along an axis that goes from the top to the bottom of the device.
+- `pitch: number` - a rotation in radians along an axis that goes from side to side of the device.
+- `yaw: number` - a rotation in radians along an axis that goes from the front to the back of the device.
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-<div style={{display: "grid", gridTemplateColumns: "repeat(3, 150px)", justifyContent: "center", textAlign: "center"}}>
+<div style={{display: "flex", justifyContent: "center", textAlign: "center"}}>
 
-<div>
+<div style={{ maxWidth: 200 }}>
   <img src={useBaseUrl('/img/rotation/roll.gif')} />
   <p>Roll</p>
 </div>
-<div>
+<div style={{ maxWidth: 200 }}>
   <img src={useBaseUrl('/img/rotation/pitch.gif')} />
   <p>Pitch</p>
 </div>
-<div>
+<div style={{ maxWidth: 200 }}>
   <img src={useBaseUrl('/img/rotation/yaw.gif')} />
   <p>Yaw</p>
 </div>
 
 </div>
 
-**Quaternion** is a convenient way to represent rotations.
-Quaternion is based on complex numbers and isn't easy to understand intuitively. Quaternions simplify interpolation between two rotations.
-Quaternions are oftentimes used in computer graphics because they don't suffer from a [gimbal lock](https://en.wikipedia.org/wiki/Gimbal_lock). Rotation sensor returns a quaternion in form of components are:
+Quaternion is a convenient way to represent rotations. Quaternion is based on complex numbers and isn't easy to understand intuitively. They simplify interpolation between two rotations.
+Quaternions are oftentimes used in computer graphics because they don't suffer from a [gimbal lock](https://en.wikipedia.org/wiki/Gimbal_lock). Rotation sensor returns a quaternion in form of its components which are:
 
-- `qw` - W component of the quaternion.
-- `qx` - X component of the quaternion.
-- `qy` - Y component of the quaternion.
-- `qz` - Z component of the quaternion.
+- `qw: number` - W component of the quaternion.
+- `qx: number` - X component of the quaternion.
+- `qy: number` - Y component of the quaternion.
+- `qz: number` - Z component of the quaternion.
+
+and
+
+- `interfaceOrientation: InterfaceOrientation`.
+
+**All other sensors** return an object with measurements in the x, y and z axes and the interface orientation:
+
+- `x` - sensor measurement on the X axis.
+- `y` - sensor measurement on the Y axis.
+- `z` - sensor measurement on the Z axis.
+- `interfaceOrientation: InterfaceOrientation`.
+
+Depending on the sensor type the measurement is a number in radians per second, m/s^2 or microtesla (μT).
+
+`InterfaceOrientation` is an enum containing these properties:
+
+- `ROTATION_0` - default rotation on Android, portrait orientation on iOS.
+- `ROTATION_90` - 90 degrees rotation on Android, landscape right orientation on iOS (landscape and home button on the right).
+- `ROTATION_180` - 180 degrees rotation on Android, upside down orientation on iOS.
+- `ROTATION_270` - 270 degrees rotation on Android, landscape left orientation on iOS (landscape and home button on the left).
 
 ## Example
 
@@ -234,17 +210,18 @@ import AnimatedSensorSrc from '!!raw-loader!@site/src/examples/AnimatedSensor';
 
 - On iOS, if you want to read sensor data you need to enable location services on your device (`Settings > Privacy > Location Services`).
 
+- On Web, the device needs to support sensors and your web application has to be connected over HTTPS.
+
+- Most of the sensors operate in resolutions up to 100Hz.
+
 - You can read the sensor data on both [UI thread](/docs/fundamentals/glossary#ui-thread) and [JavaScript thread](/docs/fundamentals/glossary#javascript-thread).
 
 ## Platform compatibility
 
 <div className="compatibility">
 
-| Android | iOS | Web               |
-| ------- | --- | ----------------- |
-| ✅      | ✅  | ✅ <sup>[1]</sup> |
-
-<sup>[1]</sup> The device needs to support sensors and your web application has to
-be connected over HTTPS.
+| Android | iOS | Web |
+| ------- | --- | --- |
+| ✅      | ✅  | ✅  |
 
 </div>
