Update compatibility table

--- a/docs/docs/advanced/setNativeProps.mdx
+++ b/docs/docs/advanced/setNativeProps.mdx
@@ -75,7 +75,7 @@ import SetNativePropsSrc from '!!raw-loader!@site/src/examples/SetNativeProps';
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
