--- a/docs/docs/animations/withDelay.mdx
+++ b/docs/docs/animations/withDelay.mdx
@@ -65,7 +65,7 @@ import DelayTextSrc from '!!raw-loader!@site/src/examples/DelayText';
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
