--- a/docs/docs/animations/withSequence.mdx
+++ b/docs/docs/animations/withSequence.mdx
@@ -65,7 +65,7 @@ import SequenceWobbleSrc from '!!raw-loader!@site/src/examples/SequenceWobble';
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
