--- a/docs/docs/core/useAnimatedRef.mdx
+++ b/docs/docs/core/useAnimatedRef.mdx
@@ -73,7 +73,7 @@ Alternatively, you can get the value stored in the `current` in [event handlers]
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
