--- a/docs/docs/device/useReducedMotion.mdx
+++ b/docs/docs/device/useReducedMotion.mdx
@@ -45,7 +45,7 @@ import UseReducedMotionSrc from '!!raw-loader!@site/src/examples/UseReducedMotio
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
