--- a/docs/docs/layout-animations/entering-exiting-animations.mdx
+++ b/docs/docs/layout-animations/entering-exiting-animations.mdx
@@ -1350,7 +1350,7 @@ ZoomIn.delay(500)
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
