--- a/docs/docs/core/useAnimatedStyle.mdx
+++ b/docs/docs/core/useAnimatedStyle.mdx
@@ -123,7 +123,7 @@ const styles = StyleSheet.create({
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
