--- a/docs/docs/core/useSharedValue.mdx
+++ b/docs/docs/core/useSharedValue.mdx
@@ -106,7 +106,7 @@ function App() {
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
