Add compatibility table (#5122)
## Summary
Add compatibility table to docs
![Screenshot 2023-10-12 at 11 42
48](https://github.com/software-mansion/react-native-reanimated/assets/56199675/75b48fdc-dad1-4060-9d3b-8b5d3fe3685b)

---------

Co-authored-by: Aleksandra Cynk <aleksandra.cynk@swmansion.com>
Co-authored-by: Kacper Kapuściak <39658211+kacperkapusciak@users.noreply.github.com>
Co-authored-by: kacperkapusciak <kacper.kapusciak@swmansion.com>

--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -136,7 +136,8 @@ See [Multiple versions of Reanimated were detected](#multiple-versions-of-reanim
 
 **Problem:** Reanimated supports New Architecture (Fabric) only on the latest minor release of React Native.
 
-**Solution:** Please upgrade to at least React Native 0.72 or downgrade to an older version of Reanimated 3.
+**Solution:** Please upgrade to a newer version of React Native or downgrade to an older version of Reanimated.
+See [the compatibility table](compatibility) for a full list of supported versions of React Native.
 
 ## Threading issues
 
