--- a/docs/docs/core/useAnimatedStyle.mdx
+++ b/docs/docs/core/useAnimatedStyle.mdx
@@ -62,10 +62,6 @@ Only relevant when using Reanimated [without the Babel plugin on the Web](https:
 
 Types of `useAnimatedStyle` are made so they mimic behavior of `StyleSheet` styles as much as possible - `updater` callback return value should just look like a regular style object - with the exception of using shared values.
 
-:::caution
-For better compliance with custom components, `useAnimatedStyle` return value type might seem like it can be appended to a non-animated component - but this will result in an error. Always use `useAnimatedStyle` return value with animated components only.
-:::
-
 ## Example
 
 import AnimatingStyles from '@site/src/examples/AnimatingStyles';
@@ -96,6 +92,8 @@ function App() {
 
 </Indent>
 
+- You can apply the value returned from `useAnimatedStyle` only to `Animated` components. Passing the animated styles to non-animated component will result in an error.
+
 - Only define the dynamic part of your styles with `useAnimatedStyle` and keep the static ones separately using `StyleSheet` API or (if you really have to) with inline styles. That way you avoid lots of unnecessary style recalculations. Static and dynamic styles can be easily merged using the `[]` syntax:
 
 <Indent>
@@ -123,6 +121,25 @@ const styles = StyleSheet.create({
 
 - You can share animated styles between components to avoid code duplication.
 
+- The callback passed to the `useAnimatedStyle` is first run on the [JavaScript thread](/docs/fundamentals/glossary#javascript-thread) and immediately after on the [UI thread](/docs/fundamentals/glossary#ui-thread). This may cause an error if you write your code as if it's running on UI thread only. To avoid this, you can use the `global._WORKLET` variable to check if the code is running on the UI thread:
+
+<Indent>
+
+```jsx
+function App() {
+  const animatedStyles = useAnimatedStyle(() => {
+    // highlight-next-line
+    if (global._WORKLET) {
+      // UI thread only code
+    } else {
+      // JS thread fallback code
+    }
+  });
+}
+```
+
+</Indent>
+
 ## Platform compatibility
 
 <div className="compatibility">
@@ -132,24 +149,3 @@ const styles = StyleSheet.create({
 | ✅      | ✅  | ✅  |
 
 </div>
-
-## Advanced
-
-- The callback passed to the `useAnimatedStyle` is first run on the [JavaScript thread](/docs/fundamentals/glossary#javascript-thread) and immediately after on the [UI thread](/docs/fundamentals/glossary#ui-thread). This might cause an error had you expected UI thread execution only. To avoid this, you can use the `global._WORKLET` variable to check if the code is running on the UI thread:
-
-<Indent>
-
-```jsx
-function App() {
-  const animatedStyles = useAnimatedStyle(() => {
-    // highlight-next-line
-    if (global._WORKLET) {
-      // UI thread only code.
-    } else {
-      // JS thread fallback code.
-    }
-  });
-}
-```
-
-</Indent>
