Remove dead links

--- a/docs/docs/device/useAnimatedSensor.mdx
+++ b/docs/docs/device/useAnimatedSensor.mdx
@@ -4,11 +4,11 @@ sidebar_position: 2
 
 `useAnimatedSensor` lets you create animations based on data from the device's sensors. You can access:
 
-- [Accelerometer](/docs/device/useAnimatedSensor#accelerometer) - the device acceleration (without gravity).
-- [Gyroscope](/docs/device/useAnimatedSensor#gyroscope) - the rotation rate of the device.
-- [Gravity](/docs/device/useAnimatedSensor#gravity) - the current gravity vector.
-- [Magnetic field](/docs/device/useAnimatedSensor#magnetic-field) - the magnetic field vector.
-- [Rotation](/docs/device/useAnimatedSensor#rotation) - the device orientation in three dimensions.
+- **Accelerometer** - the device acceleration (without gravity).
+- **Gyroscope** - the rotation rate of the device.
+- **Gravity** - the current gravity vector.
+- **Magnetic field** - the magnetic field vector.
+- **Rotation** - the device orientation in three dimensions.
 
 For a full, in depth documentation follow the [Sensors guide](https://developer.android.com/guide/topics/sensors/sensors_overview) on Android Developers and the [Device motion](https://developer.apple.com/documentation/coremotion/getting_processed_device-motion_data) in the Apple Developer documentation.
 
