Apply suggestions from code review
Co-authored-by: Tomasz Żelawski <40713406+tjzel@users.noreply.github.com>

--- a/docs/docs/device/useAnimatedSensor.mdx
+++ b/docs/docs/device/useAnimatedSensor.mdx
@@ -141,7 +141,7 @@ You can specify the iOS reference frame using an `IOSReferenceFrame` enum contai
 | Name        | Type                                  | Description                                                                                                                                                                                                                                     |
 | ----------- | ------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | sensor      | `SharedValue<Value3D｜ValueRotation>` | A [shared value](/docs/fundamentals/glossary#shared-value) containing the sensor measurements. The values returned by the sensor depend on the type of sensor you choose with [sensorType](/docs/device/useAnimatedSensor#sensortype) argument. |
-| unregister  | `() => void`                          | Allows to stop listening to sensor updates                                                                                                                                                                                                      |
+| unregister  | `() => void`                          | Allows to stop listening to sensor updates on call.                                                                                                                                                                                                      |
 | isAvailable | `boolean`                             | Indicates whether sensor is available to use. You won't be able to use a sensor when it's missing from the device or the app doesn't have permission to access it.                                                                              |
 | config      | `SensorConfig`                        | An object containing sensor configuration.                                                                                                                                                                                                      |
 
