hange "automagically" to "automatically"

--- a/docs/docs/fundamentals/your-first-animation.mdx
+++ b/docs/docs/fundamentals/your-first-animation.mdx
@@ -42,7 +42,7 @@ You can create your own custom Animated components with [`createAnimatedComponen
 
 ## Defining a shared value
 
-A [shared value](/docs/fundamentals/glossary#shared-value) is a driving factor of all your animations. You can think of it as a React state which is automagically kept in sync between the “JavaScript” and the “native” side of your app (hence the name). You create shared values using a `useSharedValue` hook:
+A [shared value](/docs/fundamentals/glossary#shared-value) is a driving factor of all your animations. You can think of it as a React state which is automatically kept in sync between the “JavaScript” and the “native” side of your app (hence the name). You create shared values using a `useSharedValue` hook:
 
 ```jsx
 import { useSharedValue } from 'react-native-reanimated';
