Fix typo in useAnimatedSensor docs

--- a/docs/docs/device/useAnimatedSensor.mdx
+++ b/docs/docs/device/useAnimatedSensor.mdx
@@ -218,7 +218,7 @@ import AnimatedSensorSrc from '!!raw-loader!@site/src/examples/AnimatedSensor';
 
 ## Platform compatibility
 
-<div className="compatibility">
+<div className="platform-compatibility">
 
 | Android | iOS | Web |
 | ------- | --- | --- |
