--- a/docs/docs/animations/withSpring.mdx
+++ b/docs/docs/animations/withSpring.mdx
@@ -37,7 +37,6 @@ interface WithSpringConfig {
   restDisplacementThreshold?: number;
   velocity?: number;
   reduceMotion?: ReduceMotion;
-  clamp?: [number, number];
 }
 
 function withSpring<T extends AnimatableValue>(
@@ -69,39 +68,26 @@ import { useSpringPlayground } from '@site/src/components/InteractivePlayground'
 
 <InteractivePlayground usePlayground={useSpringPlayground} />
 
-#### Available config properties:
+Available properties:
 
-**Available for physics-based spring**
-
-| Name                 | Type     | Default | Description                                                                                | reanimated |
-| -------------------- | -------- | ------- | ------------------------------------------------------------------------------------------ | ---------- |
-| mass <Optional />    | `number` | 1       | The weight of the spring. Reducing this value makes the animation faster.                  |            |
-| damping <Optional /> | `number` | 10      | How quickly a spring slows down. Higher damping means the spring will come to rest faster. |            |
-
-**Available for duration-based spring**
-
-| Name                      | Type     | Default | Description                                                                                                               | reanimated |
-| ------------------------- | -------- | ------- | ------------------------------------------------------------------------------------------------------------------------- | ---------- |
-| duration <Optional />     | `number` | 2000    | Length of the animation (in milliseconds).                                                                                | ≥ 3.2.x    |
-| dampingRatio <Optional /> | `number` | 0.5     | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. | ≥ 3.2.x    |
+| Name                      | Type           | Default               | Description                                                                                                               |
+| ------------------------- | -------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------------- |
+| mass                      | `number`       | 1                     | The weight of the spring. Reducing this value makes the animation faster.                                                 |
+| damping                   | `number`       | 10                    | How quickly a spring slows down. Higher damping means the spring will come to rest faster.                                |
+| duration                  | `number`       | 2000                  | Length of the animation (in milliseconds).                                                                                |
+| dampingRatio              | `number`       | 0.5                   | How damped the spring is. Value `1` means the spring is critically damped, and value `>1` means the spring is overdamped. |
+| stiffness                 | `number`       | 100                   | How bouncy the spring is.                                                                                                 |
+| velocity                  | `number`       | 0                     | Initial velocity applied to the spring equation.                                                                          |
+| overshootClamping         | `boolean`      | false                 | Whether a spring can bounce over the `toValue`.                                                                           |
+| restDisplacementThreshold | `number`       | 0.01                  | The displacement below which the spring will snap to `toValue` without further oscillations.                              |
+| restSpeedThreshold        | `number`       | 2                     | The speed in pixels per second from which the spring will snap to `toValue` without further oscillations.                 |
+| reduceMotion <Optional /> | `ReduceMotion` | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting.              |
 
 :::info
 The `mass` and `damping` (physics-based) properties can't be used at the same time as `duration` and `dampingRatio` (duration-based).
 
 When used together `duration` and `dampingRatio` overrides `mass` and `damping` props.
 :::
-
-**Available for every spring animation**
-
-| Name                                   | Type               | Default               | Description                                                                                                                                    | reanimated |
-| -------------------------------------- | ------------------ | --------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------- | ---------- |
-| stiffness <Optional />                 | `number`           | 100                   | How bouncy the spring is.                                                                                                                      |            |
-| velocity <Optional />                  | `number`           | 0                     | Initial velocity applied to the spring equation.                                                                                               |            |
-| overshootClamping <Optional />         | `boolean`          | false                 | Whether a spring can bounce over the `toValue`.                                                                                                |            |
-| restDisplacementThreshold <Optional /> | `number`           | 0.01                  | The displacement below which the spring will snap to `toValue` without further oscillations.                                                   |            |
-| restSpeedThreshold <Optional />        | `number`           | 2                     | The speed in pixels per second from which the spring will snap to `toValue` without further oscillations.                                      |            |
-| reduceMotion <Optional />              | `ReduceMotion`     | `ReduceMotion.System` | A parameter that determines how the animation responds to the device's reduced motion accessibility setting.                                   | ≥ 3.5.x    |
-| clamp <Optional />                     | `[number, number]` | `undefined`           | Limit of the scope of movement. If your spring would exceed this limit, then "dampingRatio" will be reduced (to make the spring less "bouncy") | ≥ 3.6.x    |
 
 #### `callback` <Optional />
 
